Use pretty colors and set the distro correctly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,12 @@ jobs:
         with:
           python-version: '3.x'
 
-      -name: Install test dependencies.
+      - name: Install test dependencies.
         run: pip3 install molecule docker yamllint ansible-lint
 
       - name: Run Molecule tests.
         run: molecule test
+        env:
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+          MOLECULE_DISTRO: ${{ matrix.distro }}
